# LOGIN_API_REST_ACTIX_WEB

./: .env  Cargo.toml  Query.sql  Readme.md  SeaOrm.toml  tree.txt
src/: lib.rs
src/application/users/commands/: login_command.rs  mod.rs  register_command.rs
src/application/users/handlers/: get_user_by_id_handler.rs  get_user_handler.rs  login_handler.rs  mod.rs  register_handler.rs
src/config/: constants.rs  env.rs  mod.rs
src/config/db/: connection.rs  mod.rs
src/domain/: mod.rs
src/domain/users/: entities.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
src/infrastructure/: mod.rs
src/infrastructure/jwt/: authenticate_jwt.rs  mod.rs  token_jwt.rs
src/infrastructure/swagger/: mod.rs  swagger_docs.rs
src/infrastructure/users/: repository.rs
src/interfaces/: mod.rs
src/interfaces/controllers/users/: access_controller.rs  mod.rs
src/interfaces/routes/: mod.rs  routes.rs  user_routes.rs
